--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.1"
   }
