--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.14.1"
+    "mongoose": "^8.14.1",
+    "nodemon": "^3.1.10"
   }
 }
